@@ -32,6 +32,7 @@ v0.37.4		10-May-2003
 		Due to a bug in King-FIX v.1.26.Universal mbfido did crash.
 		Now it will log this and continue processing ticfiles with the
 		risk of sending files back to the owner of that faulty program.
+		Added the same check for Seenby lines.
 
 
 v0.37.3		09-Apr-2003 - 10-May-2003
